--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
     - run: npm install
     - run: yarn dist
+    env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
   store:
     needs: build
