--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "url": "https://github.com/DoBots-Team-1/Interface/issues"
   },
   "build": {
-    "appId": "your.id",
+    "appId": "com.dobots.app",
+    "productName": "Interface",
     "mac": {
-      "category": "your.app.category.type"
+      "category": "public.app-category.developer-tools"
     }
   },
   "homepage": "https://github.com/DoBots-Team-1/Interface#readme",
   "devDependencies": {
     "electron": "^16.0.2",
-    "electron-builder": "^22.14.5"
+    "electron-builder": "^22.14.5",
+    "electron-rebuild": "^3.2.5"
   },
   "dependencies": {
+    "requirejs": "^2.3.6",
+    "roslib": "^1.1.0",
     "three": "^0.135.0"
   }
 }
