--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "requirejs": "^2.3.6",
+    "rosbag": "^3.0.0",
     "roslib": "^1.1.0",
     "three": "^0.135.0"
   }
