--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
   },
   "build": {
     "appId": "com.dobots.app",
-    "productName": "Interface",
+    "productName": "Drone Realtime Interface",
+    "icon": "./assets/images/logo.v2.png",
     "mac": {
       "category": "public.app-category.developer-tools"
     }
   },
   "homepage": "https://github.com/DoBots-Team-1/Interface#readme",
   "devDependencies": {
-    "electron": "^16.0.2",
+    "electron": "^16.0.5",
     "electron-builder": "^22.14.5",
     "electron-rebuild": "^3.2.5"
   },
